# productive-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/skills/spec-driven-development/: SKILL.md
frontend/: app.js  index.html  styles.css
infra/localstack/init/: 01-init-resources.sh
infra/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 0001_init_pgvector_documents.py
scripts/: ingest.py
specs/: f1-datos.md
src/app/: config.py  main.py
src/app/api/routes/: health.py
src/app/cloud/: __init__.py  client.py  secrets.py  storage.py
tests/integration/: test_cloud.py
tests/unit/: test_ingesta.py
