[project]
name = "productive-rag"
version = "0.1.0"
description = "RAG productivo sobre el Manual del Jugador de DnD 5e (FastAPI + pgvector + Redis + LocalStack)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Base de datos vectorial
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    # Memoria a corto plazo
    "redis>=5.2",
    # AWS (LocalStack)
    "boto3>=1.35",
    # LLM / embeddings
    "openai>=1.55",
    # Ingesta de PDF
    "pypdf>=5.1",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    # HTTP client
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "tiktoken>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "locust>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
